# gtest_demo2

./: CMakeLists.txt  README.md  gtest.py  main.cpp  send_feishu.py
.github/workflows/: test.yml
include/: array_functions.hxx  date_utils.hxx  math_functions.hxx  math_utils.hxx  string_functions.hxx  string_utils.hxx  vector_utils.hxx
res/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  GTestDemo.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  tests.vcxproj  tests.vcxproj.filters
res/Testing/: TAG
res/Testing/20250415-0657/: Test.xml
res/Testing/Temporary/: CTestCostData.txt
res/lib/Debug/: gtest_maind.lib
res/tests.dir/Debug/: tests.exe.recipe
res/tests.dir/Debug/tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
res/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
res/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
res/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
res/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  (+2 more)
src/: array_functions.cpp  date_utils.cpp  math_functions.cpp  math_utils.cpp  string_functions.cpp  string_utils.cpp  vector_utils.cpp
test/: array_functions_test.cpp  date_utils_test.cpp  math_functions_test.cpp  math_utils_test.cpp  string_functions_test.cpp  string_utils_test.cpp  vector_utils_test.cpp
